Fix tab order of Inspector dlgs.
Many (sub-)dlgs making up the Inspector have a seemingly random tab order. To improve navigation via keyboard, the tab oder of all dlgs has been corrected to the visual order of controls.

Care has been taken not to alter the dlg sizes.


Former-commit-id: f08d15e2b1060166d3823ee57d19d6d14e706465

--- a/mscore/inspector/inspector_articulation.ui
+++ b/mscore/inspector/inspector_articulation.ui
@@ -230,6 +230,14 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>direction</tabstop>
+  <tabstop>resetDirection</tabstop>
+  <tabstop>anchor</tabstop>
+  <tabstop>resetAnchor</tabstop>
+  <tabstop>timeStretch</tabstop>
+  <tabstop>resetTimeStretch</tabstop>
+ </tabstops>
  <resources>
   <include location="../musescore.qrc"/>
  </resources>
