--- a/mscore/inspector/inspector_hbox.ui
+++ b/mscore/inspector/inspector_hbox.ui
@@ -194,6 +194,13 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>leftGap</tabstop>
+  <tabstop>resetLeftGap</tabstop>
+  <tabstop>rightGap</tabstop>
+  <tabstop>resetRightGap</tabstop>
+  <tabstop>width</tabstop>
+ </tabstops>
  <resources>
   <include location="../musescore.qrc"/>
  </resources>
