--- a/mscore/inspector/inspector_timesig.ui
+++ b/mscore/inspector/inspector_timesig.ui
@@ -106,6 +106,10 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>showCourtesy</tabstop>
+  <tabstop>resetShowCourtesy</tabstop>
+ </tabstops>
  <resources>
   <include location="../musescore.qrc"/>
  </resources>
