--- a/mscore/lineproperties.ui
+++ b/mscore/lineproperties.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>504</width>
+    <width>516</width>
     <height>459</height>
    </rect>
   </property>
@@ -34,23 +34,19 @@
         <string>Begin</string>
        </property>
        <layout class="QGridLayout" name="gridLayout_2">
-        <item row="2" column="0">
-         <widget class="QCheckBox" name="beginHook">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
+        <item row="2" column="1" colspan="4">
+         <widget class="QDoubleSpinBox" name="beginHookHeight">
+          <property name="suffix">
+           <string>sp</string>
           </property>
-          <property name="text">
-           <string>Hook:</string>
+          <property name="minimum">
+           <double>-999.000000000000000</double>
           </property>
-         </widget>
-        </item>
-        <item row="0" column="9">
-         <widget class="QToolButton" name="beginTextTb">
-          <property name="text">
-           <string>...</string>
+          <property name="maximum">
+           <double>999.990000000000009</double>
+          </property>
+          <property name="singleStep">
+           <double>0.500000000000000</double>
           </property>
          </widget>
         </item>
@@ -73,6 +69,25 @@
           </item>
          </widget>
         </item>
+        <item row="1" column="1">
+         <widget class="QLabel" name="label">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>38</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>Place:</string>
+          </property>
+         </widget>
+        </item>
         <item row="2" column="6">
          <widget class="QRadioButton" name="beginHookType90">
           <property name="text">
@@ -80,17 +95,49 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
-         <widget class="QLabel" name="label">
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_2">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>80</width>
+            <height>0</height>
+           </size>
+          </property>
           <property name="text">
-           <string>Place:</string>
+           <string>Text:</string>
           </property>
          </widget>
         </item>
-        <item row="0" column="0">
-         <widget class="QLabel" name="label_2">
+        <item row="0" column="9">
+         <widget class="QToolButton" name="beginTextTb">
           <property name="text">
-           <string>Text:</string>
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="5">
+         <widget class="QLabel" name="label_11">
+          <property name="text">
+           <string>Up</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <widget class="QCheckBox" name="beginHook">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="text">
+           <string>Hook:</string>
           </property>
          </widget>
         </item>
@@ -103,29 +150,6 @@
         </item>
         <item row="0" column="1" colspan="8">
          <widget class="QLineEdit" name="beginText"/>
-        </item>
-        <item row="2" column="1" colspan="4">
-         <widget class="QDoubleSpinBox" name="beginHookHeight">
-          <property name="suffix">
-           <string>sp</string>
-          </property>
-          <property name="minimum">
-           <double>-999.000000000000000</double>
-          </property>
-          <property name="maximum">
-           <double>999.990000000000009</double>
-          </property>
-          <property name="singleStep">
-           <double>0.500000000000000</double>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="5">
-         <widget class="QLabel" name="label_11">
-          <property name="text">
-           <string>Up</string>
-          </property>
-         </widget>
         </item>
        </layout>
       </widget>
@@ -151,6 +175,18 @@
         </item>
         <item row="0" column="0">
          <widget class="QLabel" name="label_3">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>80</width>
+            <height>0</height>
+           </size>
+          </property>
           <property name="text">
            <string>Text:</string>
           </property>
@@ -161,6 +197,12 @@
         </item>
         <item row="1" column="1">
          <widget class="QLabel" name="label_4">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="text">
            <string>Place:</string>
           </property>
@@ -274,6 +316,12 @@
         </item>
         <item row="1" column="1">
          <widget class="QLabel" name="label_6">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="text">
            <string>Place:</string>
           </property>
@@ -281,6 +329,18 @@
         </item>
         <item row="0" column="0">
          <widget class="QLabel" name="label_5">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>80</width>
+            <height>0</height>
+           </size>
+          </property>
           <property name="text">
            <string>Text:</string>
           </property>
