--- a/mscore/inspector/inspector_barline.ui
+++ b/mscore/inspector/inspector_barline.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>274</width>
-    <height>120</height>
+    <width>283</width>
+    <height>169</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -64,48 +64,7 @@
       <number>0</number>
      </property>
      <item row="0" column="1">
-      <widget class="QComboBox" name="type">
-       <item>
-        <property name="text">
-         <string>Normal</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Double</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Start Repeat</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>End Repeat</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Dashed</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>End</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>End-Start Repeat</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Dotted</string>
-        </property>
-       </item>
-      </widget>
+      <widget class="QComboBox" name="type"/>
      </item>
      <item row="0" column="0">
       <widget class="QLabel" name="label">
@@ -122,6 +81,126 @@
      </item>
      <item row="0" column="2">
       <widget class="QToolButton" name="resetType">
+       <property name="toolTip">
+        <string>reset value</string>
+       </property>
+       <property name="text">
+        <string>...</string>
+       </property>
+       <property name="icon">
+        <iconset resource="../musescore.qrc">
+         <normaloff>:/data/icons/resetproperty.png</normaloff>:/data/icons/resetproperty.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>14</width>
+         <height>14</height>
+        </size>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>Span from</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Span</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QSpinBox" name="spanFrom"/>
+     </item>
+     <item row="1" column="1">
+      <widget class="QSpinBox" name="span"/>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_4">
+       <property name="text">
+        <string>Span to</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QSpinBox" name="spanTo"/>
+     </item>
+     <item row="1" column="2">
+      <widget class="QToolButton" name="resetSpan">
+       <property name="toolTip">
+        <string>reset value</string>
+       </property>
+       <property name="text">
+        <string>...</string>
+       </property>
+       <property name="icon">
+        <iconset resource="../musescore.qrc">
+         <normaloff>:/data/icons/resetproperty.png</normaloff>:/data/icons/resetproperty.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>14</width>
+         <height>14</height>
+        </size>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="2">
+      <widget class="QToolButton" name="resetSpanFrom">
+       <property name="toolTip">
+        <string>reset value</string>
+       </property>
+       <property name="text">
+        <string>...</string>
+       </property>
+       <property name="icon">
+        <iconset resource="../musescore.qrc">
+         <normaloff>:/data/icons/resetproperty.png</normaloff>:/data/icons/resetproperty.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>14</width>
+         <height>14</height>
+        </size>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="2">
+      <widget class="QToolButton" name="resetSpanTo">
+       <property name="toolTip">
+        <string>reset value</string>
+       </property>
+       <property name="text">
+        <string>...</string>
+       </property>
+       <property name="icon">
+        <iconset resource="../musescore.qrc">
+         <normaloff>:/data/icons/resetproperty.png</normaloff>:/data/icons/resetproperty.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>14</width>
+         <height>14</height>
+        </size>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="0">
+      <widget class="QLabel" name="label_5">
+       <property name="text">
+        <string>Spantype</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1">
+      <widget class="QComboBox" name="spanType"/>
+     </item>
+     <item row="4" column="2">
+      <widget class="QToolButton" name="resetSpanType">
        <property name="toolTip">
         <string>reset value</string>
        </property>
