Fix #20724 - Remove "Hide/show naturals" in keysig context menu.
In addition to the score-wide style (which is kept without changes), naturals for individual key sigs are controlled by a previous section break: if the previous measure has a section break, naturals are always hidden; otherwise they follow the score settings.

The KeySig::_showNaturals member var is removed, as well as all the code involving it. This should bring a substantial simplification of the matter, while keeping the possibility to control individual key sig instances.

A partial regression is introduced for 1.x scores, which did not have the concept of section break: they will show naturals originally hidden, until the proper section breaks are not added (which it likely to be done anyway, if the score contains several pieces).


Former-commit-id: 9da86989265120edbf318b5d7ba86d8ef1c49764

--- a/mscore/debugger/keysig.ui
+++ b/mscore/debugger/keysig.ui
@@ -17,7 +17,16 @@
    <property name="spacing">
     <number>6</number>
    </property>
-   <property name="margin">
+   <property name="leftMargin">
+    <number>8</number>
+   </property>
+   <property name="topMargin">
+    <number>8</number>
+   </property>
+   <property name="rightMargin">
+    <number>8</number>
+   </property>
+   <property name="bottomMargin">
     <number>8</number>
    </property>
    <item>
@@ -98,13 +107,6 @@
        <widget class="QCheckBox" name="showCourtesySig">
         <property name="text">
          <string notr="true">showCourtesySig</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="2" colspan="2">
-       <widget class="QCheckBox" name="showNaturals">
-        <property name="text">
-         <string notr="true">showNaturals</string>
         </property>
        </widget>
       </item>
